RESTCOMM-717 #comment Voice Interpreter will only attempt to play background music for the first participant to join the call (except moderator of course). For following participants, the Voice Interpreter will check if check if BG music is already being played on conference bridge.